--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,27 @@
 {
-    "name": "erekle/statistic",
-    "authors": [
-        {
-            "name": "erekle",
-            "email": "erekle.k1@gmail.com"
-        }
-    ],
-    "require": {
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^6.4"
-    },
-    "autoload": {
-        "psr-4": {
-            "Erekle\\Statistic\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Erekle\\Statistic\\Tests\\": "tests/"
-        }
+  "name": "erekle/statistic",
+  "authors": [
+    {
+      "name": "erekle",
+      "email": "erekle.k1@gmail.com"
     }
+  ],
+  "require": {
+    "php": ">=7",
+    "doctrine/orm": "*",
+    "illuminate/database": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Erekle\\Statistic\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Erekle\\Statistic\\Tests\\": "tests/"
+    }
+  }
 }
